--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
     <label for="founder">Name of the Founder:</label>
     <input type="text" id="founder" name="founder" required>
 
-    <label for="place">Saan niya hinanap yung bagay na nawala:</label>
+    <label for="place">Place where item was seen:</label>
     <input type="text" id="place" name="place" required>
 
-    <label for="time">Ano oras at kailan nawala:</label>
-    <input type="text" id="time" name="time" required>
+    <label for="time">Date and Time Lost:</label>
+    <input type="datetime-local" id="time" name="time" required>
 
-    <label for="description">Description ng bagay:</label>
+    <label for="description">Description:</label>
     <textarea id="description" name="description" rows="3" required></textarea>
 
     <label for="image">Upload Image (optional):</label>
@@ -101,10 +101,9 @@
 
       try {
         const response = await fetch('https://lost-and-found2-0dfg.onrender.com/send-report', {
-        method: 'POST',
-        body: formData
+          method: 'POST',
+          body: formData
         });
-
 
         const result = await response.json();
         if (result.success) {
@@ -116,17 +115,32 @@
         alert("Error connecting to server: " + err.message);
       }
 
+      // Format datetime
+      let formattedDateTime = form.time.value;
+      if (formattedDateTime) {
+        const dateObj = new Date(form.time.value);
+        const options = {
+          year: "numeric",
+          month: "long",
+          day: "numeric",
+          hour: "numeric",
+          minute: "2-digit",
+          hour12: true
+        };
+        formattedDateTime = dateObj.toLocaleString(undefined, options);
+      }
+
       // Display locally too
       const reportItem = document.createElement('div');
       reportItem.classList.add('report-item');
       reportItem.innerHTML = `
         <p><strong>Founder:</strong> ${form.founder.value}</p>
         <p><strong>Place Searched:</strong> ${form.place.value}</p>
-        <p><strong>Time Lost:</strong> ${form.time.value}</p>
+        <p><strong>Time Lost:</strong> ${formattedDateTime}</p>
         <p><strong>Description:</strong> ${form.description.value}</p>
       `;
 
-      // preview uploaded image if exists
+      // Preview uploaded image if exists
       if (form.image.files[0]) {
         const img = document.createElement('img');
         img.src = URL.createObjectURL(form.image.files[0]);
