--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,29 +11,35 @@
       margin: 20px;
       background: #f4f4f9;
     }
+
     h1 {
       text-align: center;
     }
+
     form {
       background: white;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
       max-width: 500px;
       margin: auto;
     }
+
     label {
       display: block;
       margin-top: 10px;
       font-weight: bold;
     }
-    input, textarea {
+
+    input,
+    textarea {
       width: 100%;
       padding: 8px;
       margin-top: 5px;
       border: 1px solid #ccc;
       border-radius: 5px;
     }
+
     button {
       margin-top: 15px;
       padding: 10px;
@@ -42,22 +49,26 @@
       border-radius: 5px;
       cursor: pointer;
     }
+
     button:hover {
       background: #0056b3;
     }
+
     .report-list {
       margin-top: 30px;
       max-width: 600px;
       margin-left: auto;
       margin-right: auto;
     }
+
     .report-item {
       background: white;
       padding: 15px;
       border-radius: 8px;
       margin-bottom: 10px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     }
+
     .report-item img {
       max-width: 200px;
       margin-top: 10px;
@@ -65,6 +76,7 @@
     }
   </style>
 </head>
+
 <body>
   <h1>Lost and Found Report</h1>
   <form id="reportForm" enctype="multipart/form-data">
@@ -94,16 +106,17 @@
     const form = document.getElementById('reportForm');
     const reportList = document.getElementById('reportList');
 
-    form.addEventListener('submit', async function(e) {
+    form.addEventListener('submit', async function (e) {
       e.preventDefault();
 
       const formData = new FormData(form);
 
       try {
-        const response = await fetch('https://lost-and-found2-0dfg.onrender.com/send-report', {
+        const response = await fetch('https://lost-and-found-1-a1pu.onrender.com/send-report', {
           method: 'POST',
           body: formData
         });
+
 
         const result = await response.json();
         if (result.success) {
@@ -152,4 +165,5 @@
     });
   </script>
 </body>
+
 </html>
