--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,35 +10,29 @@
       margin: 20px;
       background: #f4f4f9;
     }
-
     h1 {
       text-align: center;
     }
-
     form {
       background: white;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
       max-width: 500px;
       margin: auto;
     }
-
     label {
       display: block;
       margin-top: 10px;
       font-weight: bold;
     }
-
-    input,
-    textarea {
+    input, textarea {
       width: 100%;
       padding: 8px;
       margin-top: 5px;
       border: 1px solid #ccc;
       border-radius: 5px;
     }
-
     button {
       margin-top: 15px;
       padding: 10px;
@@ -49,26 +42,22 @@
       border-radius: 5px;
       cursor: pointer;
     }
-
     button:hover {
       background: #0056b3;
     }
-
     .report-list {
       margin-top: 30px;
       max-width: 600px;
       margin-left: auto;
       margin-right: auto;
     }
-
     .report-item {
       background: white;
       padding: 15px;
       border-radius: 8px;
       margin-bottom: 10px;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
     }
-
     .report-item img {
       max-width: 200px;
       margin-top: 10px;
@@ -76,7 +65,6 @@
     }
   </style>
 </head>
-
 <body>
   <h1>Lost and Found Report</h1>
   <form id="reportForm" enctype="multipart/form-data">
@@ -89,7 +77,7 @@
     <label for="time">Date and Time Lost:</label>
     <input type="datetime-local" id="time" name="time" required>
 
-    <label for="description">Description:</label>
+    <label for="description">Description ng bagay:</label>
     <textarea id="description" name="description" rows="3" required></textarea>
 
     <label for="image">Upload Image (optional):</label>
@@ -106,20 +94,16 @@
     const form = document.getElementById('reportForm');
     const reportList = document.getElementById('reportList');
 
-    form.addEventListener('submit', async function (e) {
+    form.addEventListener('submit', async function(e) {
       e.preventDefault();
 
       const formData = new FormData(form);
 
       try {
-        const response = await fetch('https://lost-and-found-1-a1pu.onrender.com/send-report', {
-  method: 'POST',
-  body: formData
-});
-
-
-
-
+        const response = await fetch('http://localhost:3000/send-report', {
+          method: 'POST',
+          body: formData
+        });
 
         const result = await response.json();
         if (result.success) {
@@ -168,5 +152,4 @@
     });
   </script>
 </body>
-
 </html>
