Update for Render deployment: use env vars and live fetch URL

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       const formData = new FormData(form);
 
       try {
-        const response = await fetch('https://lostandfound2-0bez.onrender.com/send-report', {
+        const response = await fetch('https://lostandfound-az9n.onrender.com/send-report', {
           method: 'POST',
           body: formData
         });
